notes overflow fix

--- a/notes/style.css
+++ b/notes/style.css
@@ -100,6 +100,7 @@ button{
     width: 100%;
     background-color: #E4FDE1;
     padding: 1rem;
+    overflow: scroll;
 }
 
 .hidden{
@@ -120,6 +121,10 @@ body::-webkit-scrollbar{
 
 .notes{
     box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.3);
+}
+
+.main::-webkit-scrollbar{
+    display: none
 }
 
 #indexNo{
